Fix: stretch nav inside flex body

--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ footer {
 
 .kopitiam-nav {
   width: 100%;
+  align-self: stretch;
   display: flex;
   justify-content: center;
   align-items: center;
